--- a/popup/index.html
+++ b/popup/index.html
@@ -9,7 +9,7 @@
   <div class="container" id="estaffingMainContainer">
     <div class="row clearfix">
     <div class="col-md-12 column">
-      <h2><a href="https://timecard2.e-staffing.ne.jp/000_002.cfm" title="Login to e-staffing"><img src="/icons/logo-140-40.png" alt="e-staffing logo" class="img-responsive"></a> Auto Logger</h2>
+      <h2><a href="https://timecard2.e-staffing.ne.jp/000_002.cfm" title="Login to e-staffing"><img src="/icons/e-staffing-logo.png" alt="e-staffing logo" class="img-responsive" height="160" width="120"></a> Auto Logger</h2>
     </div>
   </div>
 </div>
@@ -19,6 +19,9 @@
       <div class="tabbable">
         <ul class="nav nav-tabs">
           <li class="active">
+            <a href="#info-tab" data-toggle="tab">Info</a>
+          </li>
+          <li>
             <a href="#login-tab" data-toggle="tab">Login</a>
           </li>
           <li>
@@ -26,7 +29,32 @@
           </li>
         </ul>
         <div class="tab-content">
-          <div class="tab-pane active" id="login-tab">
+          <div class="tab-pane active" id="info-tab">
+            <div class="container">
+              <div class="row clearfix">
+                <div class="col-md-12 column">
+                  <dl>
+                    <dt>
+                      Last Login:
+                    </dt>
+                    <dd id="lastlogin">
+                       Please field you login informations before.
+                    </dd>
+                    <dt>
+                      Password Updated:
+                    </dt>
+                    <dd id="passwordUpdated">
+                      Please field you login informations before.
+                    </dd>
+                  </dl>
+                  <p class="text-right">
+                    <a id="loginBtn" href="https://timecard2.e-staffing.ne.jp" title="Login into your e-staffing account" class="btn btn-success hidden">Login</a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="tab-pane" id="login-tab">
             <div class="container" id="estaffingLoginContainer">
               <div class="row clearfix">
                 <div class="col-md-12 column">
@@ -65,41 +93,37 @@
                   </div>
                   <div class="container">
                     <div class="row">
-                      <div class="col-xs-6">
+                      <div class="col-md-6">
                         <div class="input-group">
                           <label for="starthh">開始時刻 / Start Time (HH):</label>
-                          <input type="text" id="starthh" class="form-control" placeholder="Hours" name="starthh">
+                          <input type="number" id="starthh" class="form-control" placeholder="Hours" name="starthh">
                         </div>
                       </div>
-                      <div class="col-xs-6">
+                      <div class="col-md-6">
                         <div class="input-group">
                           <label for="startmm">開始時刻 / Start Time (MM):</label>
                           <input type="number" id="startmm" class="form-control" placeholder="Minutes" name="startmm" maxlength="2">
                         </div>
                       </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-xs-6">
+                      <div class="col-md-6">
                         <div class="input-group">
                           <label for="endhh">終了時刻 / End Time (HH):</label>
                           <input type="number" id="endhh" class="form-control" placeholder="Hours" name="endhh" maxlength="2">
                         </div>
                       </div>
-                      <div class="col-xs-6">
+                      <div class="col-md-6">
                         <div class="input-group">
                           <label for="endmm">終了時刻 / End Time (MM):</label>
                           <input type="number" id="endmm" class="form-control" placeholder="Minutes" name="endmm" maxlength="2">
                         </div>
                       </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-xs-6">
+                      <div class="col-md-6">
                         <div class="input-group">
                           <label for="resthh">休憩時間 / Rest Time (HH):</label>
                           <input type="number" id="resthh" class="form-control" placeholder="Hours" name="resthh" maxlength="2">
                         </div>
                       </div>
-                      <div class="col-xs-6">
+                      <div class="col-md-6">
                         <div class="input-group">
                           <label for="restmm">休憩時間 / Rest Time (HH):</label>
                           <input type="number" id="restmm" class="form-control" placeholder="Minutes" name="restmm" maxlength="2">
@@ -107,7 +131,7 @@
                       </div>
                     </div>
                     <div class="row">
-                      <div class="col-xs-12">
+                      <div class="col-md-12">
                         <div class="form-group">
                           <button type="button" id="saveWorkingTime" class="btn btn-block btn-primary">Save Working Time</button>
                         </div>
@@ -123,8 +147,8 @@
     </div>
   </div>
 </div>
-  <script src="jquery-3.3.1.min.js"></script>
-  <script src="bootstrap.min.js"></script>
-  <script src="script.js"></script>
+<script src="jquery-3.3.1.min.js"></script>
+<script src="bootstrap.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
